--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <button onclick="pauseTimer()" id="pause-button" style="display: none;">Pause</button>
                 <button onclick="resetTimer()" id="reset-button" style="display: none;">Reset</button>
             </div>
+            <div id="timer-label"></div>
             <div id="timer-display">00:00</div>
             <div id="congrats-message" style="margin-top: 10px; color: green; display: none;">
                 Congratulations! You did it so well:D
